--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@xyflow/react": "^12.9.0",
     "dagre": "^0.8.5",
     "elkjs": "^0.11.0",
+    "lucide-react": "^0.548.0",
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
